# atomixos

./: .gitignore  .mdbook-lint.toml  AGENTS.md  HARDWARE-TEST-PLAN.md  README.md  _typos.toml  commitlint.config.cjs  config_bundle.md  flake.nix  hk.pkl  mise.toml  oop_all_logging.md  package.json  ruff.toml
.config/: rumdl.toml
certs/: .gitignore  README.md  ca.cert.pem  dev.ca.key.pem  dev.signing.key.pem  signing.cert.pem
scripts/atomixos_provision/: pyproject.toml
scripts/atomixos_provision/src/atomixos_provision/: __init__.py  activation.py  app.py  auth.py  bootstrap_security.py  bundle.py  config.py  config_builder.py  deps.py  exceptions.py  jobs.py  partial_config.py  provision.py  quadlet.py  quadlet_sync.py  schemas.py  server.py  settings.py  ui.py
scripts/atomixos_provision/src/atomixos_provision/domain/: __init__.py
scripts/atomixos_provision/src/atomixos_provision/domain/auth/: __init__.py  controller.py
scripts/atomixos_provision/src/atomixos_provision/domain/config/: __init__.py  controller.py  service.py
scripts/atomixos_provision/src/atomixos_provision/domain/jobs/: __init__.py  controller.py
scripts/atomixos_provision/src/atomixos_provision/domain/system/: __init__.py  controller.py
scripts/atomixos_provision/tests/: conftest.py  test_activation.py  test_app.py  test_auth.py  test_bundle.py  test_config.py  test_config_builder.py  test_config_service.py  test_deps.py  test_exceptions.py  test_jobs.py  test_partial_config.py  test_provision.py  test_quadlet.py  test_quadlet_sync.py  test_schemas.py  test_server.py  test_settings.py
(+213 files in other folders)
